--- a/css/custom.css
+++ b/css/custom.css
@@ -36,7 +36,7 @@ div.logo {
 	text-align: center;
 }
 
-div.text p {
+div.logo p {
 	font-family: "Lato"; 
 	font-weight: 100;
 	width: 250px;
@@ -44,4 +44,5 @@ div.text p {
 	line-height: 55px;
 	font-size: 45px;
 	color: #a2a2a2;
+	margin: 0;
 }
