--- a/css/custom.css
+++ b/css/custom.css
@@ -1,47 +1,102 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,100);
-body {
-	background: #1c1e26;
-}
-
 header {
-	position: fixed;
-	padding: 0;
-	clear: both;
-	background-color: #1c1e26;
-	z-index: 9998;
+	background: #c43234;
+	color: #fff;
+}
+header hr {
+	opacity: .3;
+}
+section hr {
+	border-top: 1px solid #c43234;
+	opacity: .3;
+}
+section {
+	background: #fff;
+}
+footer {
+	background: #9e2e30;
+	color: #fff;
+}
+.padding {
+	padding: 30px 0 50px 0;
+}
+.logo {
+	background: url('../img/logo.png');
 	width: 100%;
-	height: 100%;
-	-webkit-transition: all ease 1s;
-	-moz-transition: all ease 1s;
-	-ms-transition: all ease 1s;-
-	transition: all ease 1s;
-	transition: all ease 1s;
+	max-width: 512px;
+	height: 128px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin: 0 auto;
 }
-
-header:after {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 9999;
-	display: none;
+header p {
+	text-align: center;
+	font-size: 18px;
 }
-
-div.logo {
-	display: block;
-	width: 250px;
-	height: auto;
-	line-height: 250px;
+p.tagline {
+	font-size: 20px;
+	line-height: 33px;
+	width: 55%;
+	padding: 40px 0;
+	margin: 0 auto;
+}
+.col {
 	text-align: center;
 }
-
-div.text p {
-	font-family: "Lato"; 
-	font-weight: 100;
-	width: 250px;
+.icon {
+	font-size: 132px;
+}
+section h3 {
 	text-align: center;
-	line-height: 55px;
-	font-size: 45px;
-	color: #a2a2a2;
+	color: #c43234;
+	font-size: 38px;
+	padding: 0 0 20px 0;
+}
+section img {
+	width: 100%;
+	max-width: 250px;
+}
+section .image-wrapper {
+	text-align: center;
+}
+section p {
+	padding: 20px 0;
+	text-align: center;
+	width: 100%;
+	max-width: 375px;
+	margin: 0 auto;
+	font-size: 18px;
+}
+footer ul {
+	padding: 0;
+	text-align: center;
+	width: 100%;
+}
+footer ul li {
+	list-style: none;
+	display: inline;
+}
+footer li a {
+	font-size: 24px;
+	color: #fff;
+}
+footer a {
+	color: #fff;
+	text-decoration: underline;
+	margin-right: 50px;
+}
+footer a:hover {
+	color: #fff;
+}
+@media only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-devicepixel-ratio: 1.5), only screen and (min-resolution: 1.5dppx) {
+  .logo{
+    background-image: url(../img/logo@2x.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+}
+
+@media(max-width: 720px) {
+	p.tagline {
+		width: 80%;
+	}
 }
