--- a/css/custom.css
+++ b/css/custom.css
@@ -40,8 +40,7 @@ body {
 .overlay {
 	position: relative;
     zoom: 1;
-    filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#80000000', endColorstr='#80000000');
-    background: rgba(51, 51, 51, 0.5);
+    background: linear-gradient(rgba(51, 51, 51, .5), rgba(51, 51, 51, .6));
     height: 490px;
 }
 .vmiddle {
