--- a/css/custom.css
+++ b/css/custom.css
@@ -145,12 +145,19 @@ h4 {
     margin-bottom: 35px;
 }
 @media(max-width: 700px) {
+    .vmiddle {
+        top: 100%;
+        width: 100%;
+        margin: 0 auto;
+        max-width: 1000px;
+        padding: 0 26px;
+    }
     .hero-section p {
         font-size: 14px;
         line-height: 20px;
     }
     h1 {
-        font-size: 28px;
+        font-size: 33px;
         line-height: 34px;
         padding-bottom: 15px;
     }
