--- a/css/custom.css
+++ b/css/custom.css
@@ -64,6 +64,16 @@ body {
     -moz-transition: all .5s ease;
     transition: all .5s ease;
 }
+@media(max-width: 700px) {
+    .navbar {
+        background: #c43234;
+        height: 50px;
+        padding-top: 0px;
+    }
+    .navbar-right, .collapse {
+        background: #c43234;
+    }
+}
 nav {
 	color: white;
 }
