--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,8 @@ body {
 }
 .header-wrapper {
 }
+header {
+}
 @media(min-width: 1400px) {
     header {
         background: url('../img/automise-hero-image.jpg') no-repeat center center;
