--- a/css/custom.css
+++ b/css/custom.css
@@ -161,6 +161,13 @@ h4 {
     line-height: 27px;
     margin-bottom: 35px;
 }
+@media(max-width: 700px) {
+    .sub-footer ul {
+        float: none !important;
+        margin-top: 0 !important;
+        padding-left: 0 !important;
+    }
+}
 .sub-footer ul {
     float: right;
     margin-top: -60px;
