--- a/css/custom.css
+++ b/css/custom.css
@@ -170,6 +170,12 @@ h4 {
     color: #fff;
     text-decoration: none;
 }
+.meet-the-team a {
+    color: #353535;  
+}
+.meet-the-team a:hover {
+    text-decoration: none;
+}
 @media(max-width: 700px) {
     .vmiddle {
         top: 100%;
