--- a/css/custom.css
+++ b/css/custom.css
@@ -110,7 +110,7 @@ nav {
     padding-bottom: 5px;
 }
 
-h1 { 
+h1 {
     font-size: 48px;
     line-height: 52px;
     font-weight: 300;
@@ -167,15 +167,18 @@ h4 {
     color: #fff;
     font-size: 22px;
 }
-.sub-footer ul li a:hover { 
+.sub-footer ul li a:hover {
     color: #fff;
     text-decoration: none;
 }
 .meet-the-team a {
-    color: #353535;  
+    color: #353535;
 }
 .meet-the-team a:hover {
     text-decoration: none;
+}
+.circle-border {
+    border-radius: 50%;
 }
 @media(max-width: 700px) {
     .vmiddle {
@@ -312,3 +315,4 @@ footer {
 .nomargin {
     margin-bottom: 0;
 }
+
