--- a/css/custom.css
+++ b/css/custom.css
@@ -14,9 +14,27 @@ body {
 .main-wrapper {
 	overflow: hidden;
 }
+.header-wrapper {
+}
 header {
-    background: url('../img/automise-hero-image-1400.jpg') no-repeat center center;
-    background-size: cover;
+}
+@media(min-width: 1400px) {
+    header {
+        background: url('../img/automise-hero-image.jpg') no-repeat center center;
+        background-size: cover;
+    }
+}
+@media(max-width: 1400px) {
+    header {
+        background: url('../img/automise-hero-image-1400.jpg') no-repeat center center;
+        background-size: cover;
+    }
+}
+@media(max-width: 700px) {
+    header {
+        background: url('../img/automise-hero-image-1400.jpg') no-repeat center center;
+        background-size: cover;
+    }
 }
 .intro-content img {
     min-height: 100px;
@@ -90,7 +108,8 @@ nav {
     border-bottom: 1px solid white;
     padding-bottom: 5px;
 }
-h1 { 
+
+h1 {
     font-size: 48px;
     line-height: 52px;
     font-weight: 300;
@@ -147,15 +166,18 @@ h4 {
     color: #fff;
     font-size: 22px;
 }
-.sub-footer ul li a:hover { 
+.sub-footer ul li a:hover {
     color: #fff;
     text-decoration: none;
 }
 .meet-the-team a {
-    color: #353535;  
+    color: #353535;
 }
 .meet-the-team a:hover {
     text-decoration: none;
+}
+.circle-border {
+    border-radius: 50%;
 }
 @media(max-width: 700px) {
     .vmiddle {
@@ -291,4 +313,60 @@ footer {
 }
 .nomargin {
     margin-bottom: 0;
+}
+#jay-bg {
+    background-image: url('../img/jay-face.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
+}
+#jay-bg:hover {
+    background-image: url('../img/jay-robot.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
+}
+#simon-bg {
+    background-image: url('../img/simon-face.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
+}
+#simon-bg:hover {
+    background-image: url('../img/simon-robot.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
+}
+#luke-bg {
+    background-image: url('../img/luke-face.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
+}
+#luke-bg:hover {
+    background-image: url('../img/luke-robot.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
+}
+#dan-bg {
+    background-image: url('../img/dan-face.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
+}
+#dan-bg:hover {
+    background-image: url('../img/dan-robot.png');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+    background-position: center;
+    transition: background 0.5s ease-in-out;
 }
