--- a/css/custom.css
+++ b/css/custom.css
@@ -20,19 +20,19 @@ header {
 }
 @media(min-width: 1400px) {
     header {
-        background: url('../img/automise-hero-image.jpg') no-repeat center center;
+        background: url('../img/automise-hero-image-1400-optim.jpg') no-repeat center center;
         background-size: cover;
     }
 }
 @media(max-width: 1400px) {
     header {
-        background: url('../img/automise-hero-image-1400.jpg') no-repeat center center;
+        background: url('../img/automise-hero-image-1400-optim.jpg') no-repeat center center;
         background-size: cover;
     }
 }
 @media(max-width: 700px) {
     header {
-        background: url('../img/automise-hero-image-1400.jpg') no-repeat center center;
+        background: url('../img/automise-hero-image-1400-optim.jpg') no-repeat center center;
         background-size: cover;
     }
 }
@@ -43,8 +43,24 @@ header {
 	position: relative;
     zoom: 1;
     background: linear-gradient(rgba(51, 51, 51, .1), rgba(51, 51, 51, .4));
-    height: 490px;
+	height: 350px;
 }
+@media(min-width: 1400px) {
+	.overlay {
+		height: 800px;
+	}
+}
+@media(max-width: 1400px) and (min-width: 700px) {
+	.overlay {
+		height: 600px;
+	}
+}
+@media(max-width: 700px) and (min-width: 500px) {
+	.overlay {
+		height: 400px;
+	}
+}
+
 .vmiddle {
     position: relative;
     top: 91%;
